--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:4200/",
-      "sourceMaps": true,
+      "sourceMaps": false,
       "webRoot": "${workspaceRoot}",
       "trace": false,
       "sourceMapPathOverrides": {
